--- a/fatehpur-sikri.html
+++ b/fatehpur-sikri.html
@@ -11,7 +11,7 @@
         <h1 style="color:white">Fatehpur Sikri</h1>
         <nav>
             <ul>
-                <li><a href="Homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="agra-fort.html">Agra Fort</a></li>
                 <li><a href="taj_mahal.html">Taj Mahal</a></li>
                 <li><a href="fatehpur_sikri_history.html">The history of fatehpur sikri</a></li>
