--- a/agra-fort.html
+++ b/agra-fort.html
@@ -11,7 +11,7 @@
         <h1 style="color:#FFF">Agra Fort</h1>
         <nav>
             <ul>
-                <li><a href="Homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Taj_mahal.html">Taj Mahal</a></li>
                 <li><a href="fatehpur-sikri.html">Fatehpur Sikri</a></li>
                 <li><a href="agra_fort_history.html">The history of Agra Fort</a></li>
