--- a/Taj_mahal.html
+++ b/Taj_mahal.html
@@ -16,7 +16,7 @@
         <header><h1 style="color: white;">The Taj Mahal</h1>
         <nav>
             <ul>
-                <li><a href="Homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="agra-fort.html">Agra Fort</a></li>
                 <li><a href="fatehpur-sikri.html">Fatehpur Sikri</a></li>
                 <li><a href="Taj_mahal_history.html">The history of Taj Mahal</a></li>
