--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <div class="place">
-                    <a href="taj_mahal.html">
+                    <a href="Taj_mahal.html">
                         <img src="Taj_mahal_only1.jpeg" alt="Taj Mahal" style="height: 300px;">
                         <h3>Taj Mahal</h3>
                     </a>
