--- a/agra-fort.html
+++ b/agra-fort.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Taj_mahal.html">Taj Mahal</a></li>
+                <li><a href="taj_mahal.html">Taj Mahal</a></li>
                 <li><a href="fatehpur-sikri.html">Fatehpur Sikri</a></li>
                 <li><a href="agra_fort_history.html">The history of Agra Fort</a></li>
                 <li><a href="Taj_mahal_toursim.html">Book tickets</a></li>
