--- a/agra-fort.html
+++ b/agra-fort.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <img src="agra-fort.bmp" alt="Agra Fort" >
+        <img src="Agra-fort.bmp" alt="Agra Fort" >
         <section id="history">
             <h2>Brief History</h2>
             <p>Agra Fort, built by Emperor Akbar in 1565, served as the main residence of the Mughal emperors until 1638.</p>
