--- a/Taj_mahal_toursim.html
+++ b/Taj_mahal_toursim.html
@@ -64,7 +64,7 @@
         <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Taj_mahal.html">Taj Mahal</a></li>
+            <li><a href="taj_mahal.html">Taj Mahal</a></li>
             <li><a href="fatehpur-sikri.html">Fatehpur Sikri</a></li>
             <li><a href="agra-fort.html"> Agra fort</a></li>
 
