--- a/Taj_mahal_history.html
+++ b/Taj_mahal_history.html
@@ -26,7 +26,7 @@
             <h1><b>The History of the Taj Mahal</b></h1>
             <nav>
                 <ul>
-                    <li><a href="Homepage.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="agra-fort.html">Agra Fort</a></li>
                     <li><a href="fatehpur-sikri.html">Fatehpur Sikri</a></li>
                     <li><a href="taj_mahal.html">Taj Mahal</a></li>
