--- a/agra_fort_history.html
+++ b/agra_fort_history.html
@@ -11,9 +11,9 @@
         <h1 style="color:#FFFF">The History of Agra Fort</h1>
         <nav>
             <ul>
-                <li><a href="Homepage.html">Home</a></li>
-                <li><a href="Taj_mahal.html">Taj Mahal</a></li>
-                <li><a href="Agra-fort.html">Agra fort</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="taj_mahal.html">Taj Mahal</a></li>
+                <li><a href="agra-fort.html">Agra fort</a></li>
                 <li><a href="Taj_mahal_toursim.html">Book Tickets</a></li>
             </ul>
         </nav>
