--- a/agra_fort_history.html
+++ b/agra_fort_history.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="taj_mahal.html">Taj Mahal</a></li>
                 <li><a href="agra-fort.html">Agra fort</a></li>
+                <li><a href="fatehpur-sikri.html">Fatehpur Sikri</a></li>
                 <li><a href="Taj_mahal_toursim.html">Book Tickets</a></li>
             </ul>
         </nav>
