--- a/fatehpur_sikri_history.html
+++ b/fatehpur_sikri_history.html
@@ -11,8 +11,8 @@
         <h1 style="color:#FFFF">History of Fatehpur Sikri</h1>
         <nav>
             <ul>
-                <li><a href="Homepage.html">Home</a></li>
-                <li><a href="Taj_mahal.html">Taj Mahal</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="taj_mahal.html">Taj Mahal</a></li>
                 <li><a href="Agra_fort.html">Agra fort</a></li>
                 <li><a href="fatehpur-sikri.html">Fatehpur sikri</a></li>
                 <li><a href="Taj_mahal_toursim.html">Book Tickets</a></li>
