--- a/fatehpur-sikri.html
+++ b/fatehpur-sikri.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="agra-fort.html">Agra Fort</a></li>
                 <li><a href="taj_mahal.html">Taj Mahal</a></li>
-                <li><a href="fatehpur_sikri_history.html">The history of fatehpur sikri</a></li>
+                <li><a href="fatehpur_sikri_history.html">The history of Fatehpur Sikri</a></li>
                 <li><a href="Taj_mahal_toursim.html">Book tickets</a></li>
             </ul>
         </nav>
