--- a/fatehpur-sikri.html
+++ b/fatehpur-sikri.html
@@ -26,7 +26,7 @@
             <p>Fatehpur Sikri is a historic city in the Agra District of Uttar Pradesh, India. Founded in the late 16th century by the Mughal Emperor Akbar, it served as the capital of the Mughal Empire for a brief period. Today, it stands as a UNESCO World Heritage Site, renowned for its stunning architecture and historical significance.</p>
         </section>
         <section>
-            <h2>Brief History of fatehpur sikri</h2>
+            <h2>Brief History of Fatehpur Sikri</h2>
             <p>Fatehpur Sikri, founded by Emperor Akbar in 1571, served as the Mughal capital until 1585. It was built to honor the Sufi saint Sheikh Salim Chishti, whose blessing led to the birth of Akbar's heir. The city, known for its stunning red sandstone architecture, was abandoned due to water scarcity. Today, it's a UNESCO World Heritage Site and a major tourist attraction.
             </p>
         </section>
