--- a/fatehpur_sikri_history.html
+++ b/fatehpur_sikri_history.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="taj_mahal.html">Taj Mahal</a></li>
-                <li><a href="Agra_fort.html">Agra fort</a></li>
+                <li><a href="agra_fort.html">Agra fort</a></li>
                 <li><a href="fatehpur-sikri.html">Fatehpur sikri</a></li>
                 <li><a href="Taj_mahal_toursim.html">Book Tickets</a></li>
             </ul>
