--- a/fatehpur-sikri.html
+++ b/fatehpur-sikri.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fatehpur Sikri</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        img {
+            width: 100%;
+            height: auto; /* Maintain aspect ratio */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -21,7 +27,7 @@
     </header>
     <main>
         <section>
-            <img src="fatehpur_sikri.bmp" alt="Fatehpur Sikri" style="width:100%">
+            <img src="fatehpur_sikri.bmp" alt="Fatehpur Sikri">
             <h2>Discover Fatehpur Sikri</h2>
             <p>Fatehpur Sikri is a historic city in the Agra District of Uttar Pradesh, India. Founded in the late 16th century by the Mughal Emperor Akbar, it served as the capital of the Mughal Empire for a brief period. Today, it stands as a UNESCO World Heritage Site, renowned for its stunning architecture and historical significance.</p>
         </section>
