--- a/agra-fort.html
+++ b/agra-fort.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agra Fort</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        img {
+            width: 100%; 
+            height:auto;
+        }
+    </style>
 </head>
 <body>
     <header>
