--- a/taj_mahal.html
+++ b/taj_mahal.html
@@ -10,6 +10,10 @@
                 text-align: center;
                 color:white;
             }
+            img {
+            width: 100%; 
+            height:auto;
+        }
         </style>
     </head>
     <body>
