--- a/taj_mahal.html
+++ b/taj_mahal.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         </header>
-        <img src="taj_mahal.jpeg" alt="Taj mahal" width="1350">
+        <img src="taj_mahal.jpeg" alt="Taj mahal" style="width: 100%; height: auto;"
         <div class="container">
         <h2 style="font-size: 200%;"><b>About the Taj Mahal</b></h2>
         <p>The Taj Mahal, an iconic symbol of love, is a stunning masterpiece of architecture located in Agra, India. Built by Emperor Shah Jahan in memory of his beloved wife Mumtaz Mahal, it stands as a testament to their eternal love and devotion. Constructed over 22 years using white marble and adorned with intricate carvings and precious stones, the Taj Mahal attracts millions of visitors worldwide, drawn by its timeless beauty and romantic allure.</p>
